# cuda_reduced_ethminer

./: CMakeLists.txt  CMakeSettings.json  README.md
cmake/: EthCompilerSettings.cmake
ethash/: CMakeLists.txt
ethash/include/ethash/: ethash.h  ethash.hpp
ethash/lib/ethash/: ethash.cpp
ethash/lib/keccak/: keccak.c
ethminer/: CMakeLists.txt  main.cpp
libdevcore/: CMakeLists.txt  CommonData.cpp  CommonData.h
libethash-cuda/: CMakeLists.txt  dagger_shuffled.cuh  ethash_cuda_miner_kernel.cu
libethcore/: CMakeLists.txt  Farm.cpp  Farm.h  Miner.h
libpoolprotocols/: CMakeLists.txt  PoolManager.cpp  PoolManager.h
